Add context menu to save passwords

--- a/locale/ca-ES.properties
+++ b/locale/ca-ES.properties
@@ -15,3 +15,4 @@ rememberPasswords   = El Firefox actualment no demana recordar les contrasenyes.
 signIn              = Actualment no es fan còpies de seguretat de les vostres contrasenyes desades en el Firefox Sync perquè no heu iniciat una sessió al Firefox Sync. <a href="about:accounts" target="_new">Accedir al Firefox Sync</a> per a fer còpies de seguretat de les vostres contrasenyes automàticament.
 syncPasswords       = Actualment no es fan còpies de seguretat de les vostres contrasenyes desades en el Firefox Sync perquè la sincronització de contrasenya està desactivada. <a href="" id="enablePasswordSync">Feu clic aquí per a arreglar això.</a>
 insertPasswordLabel = Insereix la contrasenya per a
+savePasswordLabel   = Desa la contrasenya per a
