--- a/locale/en-US.properties
+++ b/locale/en-US.properties
@@ -15,3 +15,4 @@ rememberPasswords   = Firefox does not currently ask to remember passwords. <a h
 signIn              = Your passwords saved in Firefox are not currently backed up via Firefox Sync because you are not currently signed in to Firefox Sync. <a href="about:accounts" target="_new">Sign in to Firefox Sync</a> to back up your passwords automatically.
 syncPasswords       = Your passwords saved in Firefox are not currently backed up via Firefox Sync because password sync is turned off. <a href="" id="enablePasswordSync">Click here to fix that.</a>
 insertPasswordLabel = Insert password for
+savePasswordLabel   = Save password for
