--- a/locale/es-ES.properties
+++ b/locale/es-ES.properties
@@ -15,3 +15,4 @@ rememberPasswords   = Firefox actualmente no pide recordar contraseñas. <a href
 signIn              = Actualmente no se hacen copias de seguridad de tus contraseñas guardadas en Firefox Sync porque no has iniciado una sesión de Firefox Sync. <a href="about:accounts" target="_new">Acceder a Firefox Sync</a> para hacer copias de seguirdad de tus contraseñas automáticamente.
 syncPasswords       = Actualmente no se hacen copias de seguridad de tus contraseñas guardadas en Firefox Sync porque la sincronización de contraseñas está desactivada. <a href="" id="enablePasswordSync">Hacer clic aquí para arreglar eso.</a>
 insertPasswordLabel = Inserir la contraseña para
+savePasswordLabel   = Guardar la contraseña para
