Add option to omit lookalike characters

--- a/locale/en-US.properties
+++ b/locale/en-US.properties
@@ -8,6 +8,7 @@ optionsHeader       = Options
 minisculeLabel      = Lowercase letters
 majisculeLabel      = Uppercase letters
 numbersLabel        = Numbers
+lookalikesLabel     = Lookalikes i/I/1, o/O/0
 symbolsLabel        = Symbols:
 lengthLabel         = Length:
 generate            = Generate another password
