--- a/locale/es-ES.properties
+++ b/locale/es-ES.properties
@@ -8,6 +8,7 @@ optionsHeader       = Opciones
 minisculeLabel      = Letras minúsculas
 majisculeLabel      = Letras mayúsculas
 numbersLabel        = Números
+lookalikesLabel     = Similares i/I/1, o/O/0
 symbolsLabel        = Símbolos:
 lengthLabel         = Longitud:
 generate            = Generar otra contraseña
