--- a/locale/ca-ES.properties
+++ b/locale/ca-ES.properties
@@ -9,6 +9,7 @@ minisculeLabel      = Lletres minúscules
 majisculeLabel      = Lletres majúscules
 numbersLabel        = Nombres
 symbolsLabel        = Símbols:
+lookalikesLabel     = Semblants i/I/1, o/O/0
 lengthLabel         = Longitud:
 generate            = Genera una altra contrasenya
 rememberPasswords   = El Firefox actualment no demana recordar les contrasenyes. <a href="" id="enableRememberPasswords">Feu clic aquí per a arreglar això.</a>
