Use plural forms "miniscules" and "majiscules" to match other variables

--- a/locale/ca-ES.properties
+++ b/locale/ca-ES.properties
@@ -5,8 +5,8 @@ passwordHeader      = S'ha copiat la contrasenya nova següent al porta-retalls:
 passwordWarning     = Després d'establir la vostra contrasenya en un lloc web, sortiu d'ell i entreu de nou per a assegurar que el Firefox hagi desat la contrasenya. Si no està desada en altre lloc, <strong>aquesta contrasenya desapareixerà per a sempre</strong> quan tanqueu aquesta pàgina, recarregeu aquesta pàgina, o genereu una contrasenya nova en aquesta pàgina.
 clipboardCopy       = Copia al porta-retalls de nou
 optionsHeader       = Opcions
-minisculeLabel      = Lletres minúscules
-majisculeLabel      = Lletres majúscules
+minisculesLabel     = Lletres minúscules
+majisculesLabel     = Lletres majúscules
 numbersLabel        = Nombres
 symbolsLabel        = Símbols:
 lookalikesLabel     = Semblants i/I/1, o/O/0
