--- a/locale/en-US.properties
+++ b/locale/en-US.properties
@@ -5,8 +5,8 @@ passwordHeader      = The following new password has been copied to the clipboar
 passwordWarning     = After setting your password for a website, sign out and sign back in to make sure that Firefox saved the password. If it is not saved anywhere else, then <strong>this password will be gone for good</strong> when you close this page, refresh this page, or generate a new password on this page.
 clipboardCopy       = Copy to clipboard again
 optionsHeader       = Options
-minisculeLabel      = Lowercase letters
-majisculeLabel      = Uppercase letters
+minisculesLabel     = Lowercase letters
+majisculesLabel     = Uppercase letters
 numbersLabel        = Numbers
 lookalikesLabel     = Lookalikes i/I/1, o/O/0
 symbolsLabel        = Symbols:
