Store options in addon preferences

--- a/locale/ca-ES.properties
+++ b/locale/ca-ES.properties
@@ -5,6 +5,7 @@ passwordHeader      = S'ha copiat la contrasenya nova següent al porta-retalls:
 passwordWarning     = Després d'establir la vostra contrasenya en un lloc web, sortiu d'ell i entreu de nou per a assegurar que el Firefox hagi desat la contrasenya. Si no està desada en altre lloc, <strong>aquesta contrasenya desapareixerà per a sempre</strong> quan tanqueu aquesta pàgina, recarregeu aquesta pàgina, o genereu una contrasenya nova en aquesta pàgina.
 clipboardCopy       = Copia al porta-retalls de nou
 optionsHeader       = Opcions
+resetButton         = reinicia als valors per defecte
 minisculesLabel     = Lletres minúscules
 majisculesLabel     = Lletres majúscules
 numbersLabel        = Nombres
