--- a/locale/es-ES.properties
+++ b/locale/es-ES.properties
@@ -5,6 +5,7 @@ passwordHeader      = Se ha copiado la siguiente contraseña nueva al portapapel
 passwordWarning     = Después de establecer tu contraseña en un sitio web, sal de él y entra otra vez para asegurar que Firefox haya guardado la contraseña. Si no está guardada en otro sitio, <strong>esta contraseña desaparecerá para siempre</strong> al cerrar esta página, recargar esta página, o generar una nueva contraseña en esta página.
 clipboardCopy       = Copiar al portapapeles otra vez
 optionsHeader       = Opciones
+resetButton         = reinicia a los valores por defecte
 minisculesLabel     = Letras minúsculas
 majisculesLabel     = Letras mayúsculas
 numbersLabel        = Números
