--- a/locale/en-US.properties
+++ b/locale/en-US.properties
@@ -5,6 +5,7 @@ passwordHeader      = The following new password has been copied to the clipboar
 passwordWarning     = After setting your password for a website, sign out and sign back in to make sure that Firefox saved the password. If it is not saved anywhere else, then <strong>this password will be gone for good</strong> when you close this page, refresh this page, or generate a new password on this page.
 clipboardCopy       = Copy to clipboard again
 optionsHeader       = Options
+resetButton         = reset to defaults
 minisculesLabel     = Lowercase letters
 majisculesLabel     = Uppercase letters
 numbersLabel        = Numbers
