Translate "Length" to Catalan

--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -42,7 +42,7 @@
     "message": "Símbols:"
   },
   "lengthLabel": {
-    "message": "Length:"
+    "message": "Llargada:"
   },
   "generate": {
     "message": "Genera una altra contrasenya"
