--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -36,7 +36,7 @@
     "message": "Nombres"
   },
   "lookalikesLabel": {
-    "message": "Semblants i/I/1, o/O/0"
+    "message": "Semblants I/l/1, O/0"
   },
   "symbolsLabel": {
     "message": "Símbols:"
