--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -36,7 +36,7 @@
     "message": "Numbers"
   },
   "lookalikesLabel": {
-    "message": "Lookalikes i/I/1, o/O/0"
+    "message": "Lookalikes I/l/1, O/0"
   },
   "symbolsLabel": {
     "message": "Symbols:"
