--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -36,7 +36,7 @@
     "message": "Números"
   },
   "lookalikesLabel": {
-    "message": "Similares i/I/1, o/O/0"
+    "message": "Similares I/l/1, O/0"
   },
   "symbolsLabel": {
     "message": "Símbolos:"
